# odrill

./: .gitignore  Cargo.toml  README.md
apps/odrill/: Cargo.toml
apps/odrill-bprints/: Cargo.toml  compose.yml
apps/odrill-bprints/assets/static/: style.css
apps/odrill-bprints/assets/static/css/: package_inner_layout.css
apps/odrill-bprints/assets/static/js/: clipboard.js  dropdown.js  icons.js  main.js  package-chart.js  settings.js
apps/odrill-bprints/assets/views/: base.html
apps/odrill-bprints/assets/views/api/: docs.html
apps/odrill-bprints/assets/views/auth/: login.html  register.html
apps/odrill-bprints/assets/views/components/atoms/: _button.html  _tag.html
apps/odrill-bprints/assets/views/components/molecules/: _copy_text.html  _download_badge.html  _empty_state.html  _hero_search.html  _page_header.html  _search_form.html
apps/odrill-bprints/assets/views/components/organisms/: _item_grid.html  _navbar.html  _package_card.html  _template_card.html
apps/odrill-bprints/assets/views/templates/: index.html  show.html
apps/odrill-bprints/assets/views/user/: profile.html  settings.html
apps/odrill-bprints/assets/views/user/settings/: _delete.html  _keys.html  _modal_create_key.html  _modal_cropper.html  _profile.html  _security.html
apps/odrill-bprints/config/: development.yaml  test.yaml
apps/odrill-bprints/examples/: playground.rs
apps/odrill-bprints/migration/src/: lib.rs  m20220101_000001_users.rs  m20260102_151644_packages.rs  m20260102_152004_versions.rs  m20260103_120000_api_keys.rs  m20260103_120001_api_historic.rs  m20260103_130000_templates.rs  m20260103_140000_templates_version.rs  m20260103_220000_add_downloads.rs
apps/odrill-bprints/src/: app.rs  lib.rs  openapi.rs
apps/odrill-bprints/src/controllers/: mod.rs  packages.rs  user.rs
apps/odrill-bprints/src/controllers/pages/: auth.rs  mod.rs  packages.rs  templates.rs  user.rs
apps/odrill-bprints/src/controllers/templates/: delete.rs  download.rs  list.rs  mod.rs  publish.rs  security.rs  show.rs  types.rs  update.rs
apps/odrill-bprints/src/extractors/: api_key.rs  mod.rs
apps/odrill-bprints/src/models/: api_historic.rs  api_keys.rs  mod.rs  packages.rs  templates.rs  users.rs  versions.rs
apps/odrill-bprints/src/models/_entities/: api_historic.rs  api_keys.rs  mod.rs  package_downloads.rs  packages.rs  prelude.rs  templates.rs  users.rs  versions.rs
apps/odrill-bprints/tests/models/: mod.rs  packages.rs  users.rs
apps/odrill-bprints/tests/requests/: auth.rs  prepare_data.rs
apps/odrill/src/: auth.rs  config.rs  config_global.rs  constants.rs  main.rs  template_engine.rs
apps/odrill/src/commands/: add.rs  build.rs  check.rs  clean.rs  config.rs  doc.rs  fmt.rs  init.rs  install.rs  login.rs  mod.rs  new.rs  publish.rs
apps/odrill/src/commands/run/: game_detection.rs  isolation.rs  log_watcher.rs  mod.rs  utils.rs
apps/odrill/src/commands/templates/: mod.rs  publish.rs
examples/EOK/: .odrill-cache.json  odrill.toml
examples/EOK/loc/: english.json
examples/EOK/menu/: options.txt
examples/EOK/src/: config.lua  enemies.lua  utils.lua
examples/EOK/src/hooks/experiencemanager/: mod.lua
examples/EOK/src/hooks/hudmanagerpd2/: mod.lua
examples/EOK/src/hooks/menumanager/: mod.lua
examples/EOK/src/hooks/playermanager/: mod.lua
examples/EOK/src/hud/: colors.lua
examples/EOK/src/hud/classic/: animations.lua  mod.lua  texts.lua
examples/EOK/src/hud/modern/: animations.lua  mod.lua
examples/EOK/src/menu/: builder.lua
examples/EOK/src/player/: killstreak.lua  xp.lua
examples/colors/: odrill.toml
examples/colors/src/: init.lua
examples/math/: odrill.toml
examples/math/src/: basic.lua  init.lua  interpolation.lua  random.lua
examples/specials/: odrill.toml
examples/specials/src/: init.lua
libs/compiler/: Cargo.toml
libs/compiler/src/: lib.rs  superblt.rs
libs/compiler/src/docgen/: extractor.rs  html.rs  markdown.rs  mod.rs
libs/compiler/src/engine/: compiler_result.rs  generate.rs  mod.rs  ops.rs  processor.rs  verify.rs
libs/compiler/src/parser/: functions.rs  includes.rs  mod.rs  uses.rs
libs/container/: Cargo.toml
libs/container/src/: lib.rs
libs/container/src/io/: decode.rs  encode.rs
libs/container/src/ops/: pack.rs
libs/container/src/security/: scan.rs
libs/linter/: Cargo.toml
libs/linter/src/: analyzer.rs  diagnostics.rs  globals.rs  lib.rs
libs/linter/src/rules/: dead_code.rs  mod.rs  undefined_vars.rs  unused_vars.rs
libs/lua-bundler/: Cargo.toml
libs/lua-bundler/src/: config.rs  error.rs  lib.rs  superblt.rs
libs/lua-bundler/src/bundler/: generate.rs  mod.rs  processor.rs  symbols.rs
libs/lua-bundler/src/parser/: functions.rs  mod.rs
libs/odrill-cache/: Cargo.toml
libs/odrill-cache/src/: error.rs  file_cache.rs  hash_cache.rs  lib.rs
libs/odrill-formats/: Cargo.toml
libs/odrill-formats/src/: lib.rs
libs/pkg/: Cargo.toml
libs/pkg/src/: lib.rs  lockfile.rs  manifest.rs  package.rs  project.rs
libs/templates/: Cargo.toml
libs/templates/src/: lib.rs  manifest.rs  project.rs  render.rs
libs/templates/src/ops/: mod.rs  pack.rs  publish.rs
templates/odrill/: .gitignore  README.md  odrill.toml
templates/odrill/loc/: english.json  french.json
templates/odrill/src/: consts.lua  main.lua
templates/odrill/src/hooks/_template/: mod.lua
templates/odrill/src/hooks/chatmanager/: mod.lua
templates/odrill/src/hooks/menumanager/: mod.lua
templates/odrill/src/shared/: utils.lua
