[workspace]
resolver = "2"
members = [
    "libs/compiler",
    "apps/odrill",
    "libs/container",
    "libs/pkg",
    "libs/templates",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Glubus"]
license = "MIT"
repository = "https://github.com/glubus/odrill"

[workspace.dependencies]
# Shared dependencies across workspace
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
walkdir = "2"
regex = "1"
colored = "2"
blake3 = "1.5"
