[package]
name = "odrill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for bundling Lua modules for PAYDAY 2 mods"

[[bin]]
name = "odrill"
path = "src/main.rs"

[dependencies]
lua-bundler = { path = "../../libs/lua-bundler" }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
odrill-formats = { version = "0.1.0", path = "../../libs/odrill-formats" }
reqwest = { version = "0.13.1", features = ["json", "blocking", "multipart"] }
walkdir.workspace = true
stylua = "2.3.1"
toml_edit = "0.24.0"
