[package]
name = "odrill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for bundling Lua modules for PAYDAY 2 mods"

[[bin]]
name = "odrill"
path = "src/main.rs"

[dependencies]
compiler = { path = "../../libs/compiler" }
linter = { path = "../../libs/linter" }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
container = { version = "0.1.0", path = "../../libs/container" }
pkg = { version = "0.1.0", path = "../../libs/pkg" }
templates = { version = "0.1.0", path = "../../libs/templates" }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
walkdir.workspace = true
stylua = "2.3.1"
toml_edit = "0.24.0"
ctrlc = "3.5.1"
dirs = "6.0.0"
rkyv = { version = "0.7", features = ["validation"] }
zstd = "0.13.3"
blake3 = "1.5.5"
hex = "0.4"
chrono = "0.4"
