[package]
name = "lua-bundler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Lua module bundler and minifier library"

[dependencies]
odrill-cache = { path = "../odrill-cache" }
thiserror.workspace = true
anyhow.workspace = true
walkdir.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
