[package]
name = "odrill-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic file caching library for incremental builds"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
