[package]
name = "templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pkg = { path = "../pkg", version = "0.1.0" }
container = { path = "../container", version = "0.1.0" }
compiler = { path = "../compiler", version = "0.1.0" }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
colored.workspace = true
tempfile = "3.10"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
# rkyv/zstd might be needed if we manipulate raw bytes, but usually odrill-formats handles saving?
# odrill-formats exposes ModPackage. If ModPackage can be saved/loaded, we assume it handles io.
